--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -109,9 +109,33 @@ jobs:
         run: find artifacts | xargs ls -l
 
       - name: Create source tarball
-        run: ./Makepkgs --source --nonrpm
+        run: ./Makepkgs --source --no
+        nrpm
 
-      - name: Release on Packagecloud
+      - name: Release on Packagecloud            - 名稱：設定 Node.js 環境
+  用途：actions/setup-node@v4.2.0
+  和：
+    # 在 npmrc 中設定 always-auth。
+    always-auth: # 可選，預設為 false
+    # 要使用的版本的版本規格。範例：12.x、10.15.1、>=10.15.0。
+    節點版本：#可選
+    # 包含要使用的版本的版本規範的檔案。範例：package.json、.nvmrc、.node-version、.tool-versions。
+    node-version-file: # 可選
+    # Node 使用的目標架構。範例：x86、x64。將預設使用系統架構。
+    架構：#可選
+    # 如果您希望操作檢查符合版本規範的最新可用版本，請設定此選項。
+    檢查最新：#可選
+    # 為身份驗證設定的可選註冊表。將在專案級 .npmrc 和 .yarnrc 檔案中設定登錄，並設定 auth 從 env.NODE_AUTH_TOKEN 讀取。
+    registry-url: # 可選
+    # 針對範圍註冊表進行身份驗證的可選範圍。使用 GitHub Packages 註冊表（https://npm.pkg.github.com/）時將回退至儲存庫擁有者。
+    範圍：#可選
+    # 用於從節點版本中提取節點分佈。由於存在預設值，因此使用者通常不提供該預設值。在 github.com 上執行此操作時，預設值就足夠了。在 GHES 上運行時，如果您遇到速率限制，您可以傳遞 github.com 的個人存取權杖。
+    token: # 可選，預設為 ${{ github.server_url == 'https://github.com' && github.token || '' }}
+    # 用於指定在預設目錄中進行快取的套件管理器。支援的值：npm、yarn、pnpm。
+    快取：#可選
+    # 用於指定依賴檔案的路徑：package-lock.json、yarn.lock 等。
+    快取依賴路徑：#可選
+          
         run: build/ci/packagecloud.sh
         env:
           PACKAGECLOUD_TOKEN: ${{ secrets.PACKAGECLOUD_TOKEN }}
